Completed HTML + CSS for contact page. The porfolio page is next.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<h1 id="home-page-name-block">Steve Tice</h1>
 	<nav id="home-page-nav">
-		<a class="home-page-nav-link" id="home-page-about-link" href="" title="Home page">About</a>
-		<a class="home-page-nav-link" id="home-page-portfolio-link" href="" title="Portfolio page">Portfolio</a>
-		<a class="home-page-nav-link" id="home-page-contact-link" href="" title="Contact page">Contact</a>
+		<a class="home-page-nav-link" id="home-page-about-link" href="./index.html" title="Home page">About</a>
+		<a class="home-page-nav-link" id="home-page-portfolio-link" href="./portfolio.html" title="Portfolio page">Portfolio</a>
+		<a class="home-page-nav-link" id="home-page-contact-link" href="./contact.html" title="Contact page">Contact</a>
 	</nav>
 	<div id="clear-just-above-main"></div>
 	<main id="home-page-main-content">
