--- a/portfolio.html
+++ b/portfolio.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Portfolio of Steve Tice</title>
-	<meta name="description" content="Web Site Portfolio - portfolio page">
-	<meta name="author" content="stic6021">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<h1 id="home-page-name-block">Steve Tice</h1>
-	<nav id="home-page-nav">
-		<a class="home-page-nav-link" id="home-page-about-link" href="./index.html" title="Home page">About</a>
-		<a class="home-page-nav-link" id="home-page-portfolio-link" href="./portfolio.html" title="Portfolio page">Portfolio</a>
-		<a class="home-page-nav-link" id="home-page-contact-link" href="./contact.html" title="Contact page">Contact</a>
-	</nav>
-	<div id="clear-just-above-main"></div>
-	<main id="portfolio-page-main-content">
-		<hr id="rule-at-top-of-main">
-		<article id="portfolio-page-article">
-			<h2 id="portfolio-page-heading">Portfolio</h2>
-			<hr id="rule-just-below-portfolio-heading">
-			<table id="portfolio-page-table">
-				<tbody id="portfolio-page-table-body">
-					<tr class="portfolio-page-table-row">
-						<td class="portfolio-page-table-cell">
-							<a id=#estes-nightscapes-anchor href="http://estesnightscapes.com/" target="_blank" rel="noreferrer noopener">
-								<figure id="firs-reaching-figure">
-									<figcaption id="estes-nightscapes-caption">Estes Nightscapes</figcaption>
-									<img class="portfolio-page-left-cell" src="assets/images/FirsReaching-MedSize.jpg" alt="Firs pointing out the Milky Way">
-								</figure>
-							</a>
-						</td>
-						<td class="portfolio-page-table-cell">
-							<a id=#flixster-anchor href="https://flixster-steve-tice.herokuapp.com/" target="_blank" rel="noreferrer noopener">
-								<figure id="framus-on-stage-figure">
-									<img class="portfolio-page-right-cell" src="assets/images/FramusOnStage.jpg" alt="Upright bass ready to do business">
-									<figcaption id="flixster-caption">Flixster</figcaption>
-								</figure>
-							</a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</article>
-		<hr id="portfolio-rule-at-bottom-of-main">
-	</main>
-	<footer id="all-pages-footer">
-		<p id="home-page-footer-text">Copyright (c) 2020 Steve Tice</p>
-	</footer>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Portfolio of Steve Tice</title>
+		<meta name="description" content="Web Site Portfolio - portfolio page">
+		<meta name="author" content="stic6021">
+		<link rel="stylesheet" href="assets/css/style.css">
+	</head>
+	<body>
+		<div class="all-pages-top-row">
+			<h1 id="all-pages-name-block">Steve Tice</h1>
+			<nav id="all-pages-nav">
+				<a class="all-pages-nav-link" id="about-link" href="./index.html" title="Home page">About</a>
+				<a class="all-pages-nav-link" id="portfolio-link" href="./portfolio.html" title="Portfolio page">Portfolio</a>
+				<a class="all-pages-nav-link" id="contact-link" href="./contact.html" title="Contact page">Contact</a>
+			</nav>
+		</div>
+		<div id="clear-just-above-main"></div>
+		<main id="portfolio-page-main-content">
+			<hr id="rule-at-top-of-main">
+			<article id="portfolio-page-article">
+				<h2 id="portfolio-page-heading">Portfolio</h2>
+				<hr id="rule-just-below-portfolio-heading">
+				<table id="portfolio-page-table">
+					<tbody id="portfolio-page-table-body">
+						<tr class="portfolio-page-table-row">
+							<td class="portfolio-page-table-cell" id="estes-nightscapes-cell">
+								<a id=#estes-nightscapes-anchor href="http://estesnightscapes.com/" target="_blank" rel="noreferrer noopener">
+									<figure id="firs-reaching-figure">
+										<figcaption id="estes-nightscapes-caption">Estes Nightscapes</figcaption>
+										<img class="portfolio-page-left-cell" src="assets/images/FirsReaching-MedSize.jpg" alt="Firs pointing out the Milky Way">
+									</figure>
+								</a>
+								<span id="estes-nightscapes-tooltip-text">Night sky photography site</span>
+							</td>
+							<td class="portfolio-page-table-cell" id="flixster-cell">
+								<a id=#flixster-anchor href="https://flixster-steve-tice.herokuapp.com/" target="_blank" rel="noreferrer noopener">
+									<figure id="framus-on-stage-figure">
+										<img class="portfolio-page-right-cell" src="assets/images/FramusOnStage.jpg" alt="Upright bass ready to do business">
+										<figcaption id="flixster-caption">Flixster</figcaption>
+									</figure>
+								</a>
+								<span id="flixster-tooltip-text">Learn to play upright bass</span>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</article>
+		</main>
+		<hr id="rule-just-below-main">
+		<footer id="all-pages-footer">
+			<p id="all-pages-footer-text">Copyright (c) 2020 Steve Tice</p>
+		</footer>
+	</body>
 </html>
