Copied a previously built basic portfolio to deploy it live.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<a class="all-pages-nav-link" id="contact-link" href="./contact.html" title="Contact page">Contact</a>
 			</nav>
 		</div>
-		<main id="home-page-main-content">
+		<main class="main-content" id="home-page-main-content">
 			<hr id="rule-at-top-of-main">
 			<article id="home-page-article">
 				<h2 id="about-me-heading">About Me</h2>
