--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 				<a class="all-pages-nav-link" id="contact-link" href="./contact.html" title="Contact page">Contact</a>
 			</nav>
 		</div>
-		<main id="contact-page-main-content">
+		<main class="main-content" id="contact-page-main-content">
 			<hr id="rule-at-top-of-main">
 			<article id="contact-page-article">
 				<h2 id="contact-me-heading">Contact</h2>
