--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 				<a class="all-pages-nav-link" id="contact-link" href="./contact.html" title="Contact page">Contact</a>
 			</nav>
 		</div>
-		<main id="portfolio-page-main-content">
+		<main class="main-content" id="portfolio-page-main-content">
 			<hr id="rule-at-top-of-main">
 			<article id="portfolio-page-article">
 				<h2 id="portfolio-page-heading">Portfolio</h2>
