Added CSS reset.

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 		<title>Contact Steve Tice</title>
 		<meta name="description" content="Web Site Portfolio - contact page">
 		<meta name="author" content="stic6021">
+		<link rel="stylesheet" href="assets/css/reset.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
