--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Steve Tice</title>
 		<meta name="description" content="Web Site Portfolio">
 		<meta name="author" content="stic6021">
+		<link rel="stylesheet" href="assets/css/reset.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
