--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 		<title>Portfolio of Steve Tice</title>
 		<meta name="description" content="Web Site Portfolio - portfolio page">
 		<meta name="author" content="stic6021">
+		<link rel="stylesheet" href="assets/css/reset.css">
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
